service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web-deployment
  ports:
  - port: 80  
    targetPort: 7000
