sonar-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonar-svc
  labels:
    name: sonar-svc
spec:
  ports:
  - protocol: TCP
    # port: is the abstracted Service port
    # which can be any port other pods use to access the Service
    port: 80
    # targetPort: is the port the container accepts traffic on
    targetPort: 9000
  selector:
    app: sonar-deployment
