sonar-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonar
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: sonar.ingress.forkedprocess.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sonar-svc
            port: 
              number: 80
